feat: all celebrities apis
